fixed slideshow titles too large in mobile

--- a/scss/global.scss
+++ b/scss/global.scss
@@ -218,7 +218,7 @@ body .more-link a {
       @include title;
       font-weight: bold;
       text-shadow: none;
-      font-size: 2em;
+      font-size: 120%;
       &:hover {
       }
     }
