--- a/scss/incubator-prograde-alpha-default-narrow.scss
+++ b/scss/incubator-prograde-alpha-default-narrow.scss
@@ -7,3 +7,9 @@
 
 @import "mixin";
 
+.view-display-id-block_bigslides {
+  .views-field-name a,
+  .views-field-title a {
+    font-size: 200%;
+  }
+}
